--- a/ProjectileRandomizer/pyproject.toml
+++ b/ProjectileRandomizer/pyproject.toml
@@ -2,7 +2,8 @@
 name = "ProjectileRandomizer"
 version = "2"
 authors = [{ name = "Yeti" }]
-description = "This mod will randomize projectiles all over your game. There's 2 types of things it randomizes. One is Firing Modes and the other is Projectiles.
+description = """
+This mod will randomize projectiles all over your game. There's 2 types of things it randomizes. One is Firing Modes and the other is Projectiles.
 
 Firing modes are mostly used on weapons. Guns and vehicles use them.
 
@@ -12,10 +13,11 @@ Projectiles and Firing Modes will show on the item card.
 
 Weapons also have a 50/50 chance of projectiles being changed or even added to their firing mode.
 
-You'll see on the item card what each has been randomized to."
+You'll see on the item card what each has been randomized to.
+"""
 
 [tool.sdkmod]
 name = "Projectile Randomizer"
 license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
 download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/ProjectileRandomizer/ProjectileRandomizer.sdkmod"
-version = "1"
+version = "2"
