--- a/BetterUIControls/pyproject.toml
+++ b/BetterUIControls/pyproject.toml
@@ -12,7 +12,7 @@ Vending Machines\n
 Quest/Rewards\n
 Dialog Boxes, like the quit out screen\n
 Vehicle station, but only left and right on the first screen\n
-Stash Menus\n\n
+Stash Menus\\
 Secondary Features:<br/><br/>You can hit your reload key on your weapons and gear to cycle if an item is favorited or trash<br/><br/>The main menu and pause menu now wrap, allowing you to quickly go to the top or bottom of the list<br/><br/>Alt Use to quick buy in vendors (including vendors like Earl)<br/><br/>Equipping gear from your backpack will no longer ask where you want to equip it<br/><br/>Quick Respec by hitting you reload key in the New U Menu
 """
 
