--- a/BetterUIControls/pyproject.toml
+++ b/BetterUIControls/pyproject.toml
@@ -2,8 +2,8 @@
 name = "BetterUIControls"
 version = "2"
 authors = [{ name = "Yeti" }]
-description = """\
-This mod will let you use your movement keys (in my case WASD) to control a bunch of menus. <br/> <br/>
+description = """<p>
+This mod will let you use your movement keys (in my case WASD) to control a bunch of menus. <br> <br>
 
 
 It also enables your Use key (in my case E) to select items in menus. The mod will automatically adjust to your keys.
@@ -40,7 +40,7 @@ You can hit your reload key on your weapons and gear to cycle if an item is favo
 
 
 The main menu and pause menu now wrap, allowing you to quickly go to the top or bottom of the list<br/><br/>Alt Use to quick buy in vendors (including vendors like Earl)<br/><br/>Equipping gear from your backpack will no longer ask where you want to equip it<br/><br/>Quick Respec by hitting you reload key in the New U Menu
-"""
+</p>"""
 
 [tool.sdkmod]
 name = "Better UI Controls"
