--- a/AutomaticReloadFix/pyproject.toml
+++ b/AutomaticReloadFix/pyproject.toml
@@ -6,8 +6,8 @@ description = "Fixes weapons not automatically reloading when their magazines ar
 
 [tool.sdkmod]
 name = "Automatic Reload Fix"
-supported_games = ["BL2"]
+supported_games = ["BL2", "TPS", "AODK",]
 license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
 coop_support = "ClientSide"
-download = ""
+download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/AutomaticReloadFix/AutomaticReloadFix.sdkmod"
 version = "1"
