--- a/AltUseFastTravel/pyproject.toml
+++ b/AltUseFastTravel/pyproject.toml
@@ -9,5 +9,5 @@ name = "Alt Use Fast Travel"
 supported_games = ["BL2", "TPS", "AoDK"]
 license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
 coop_support = "HostOnly"
-download = ""
+download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/AltUseFastTravel/AltUseFastTravel.sdkmod"
 version = "1"
