--- a/AltUseFastTravel/pyproject.toml
+++ b/AltUseFastTravel/pyproject.toml
@@ -6,7 +6,7 @@ description = "Enables alt use for fast travel stations. Options include traveli
 
 [tool.sdkmod]
 name = "Alt Use Fast Travel"
-supported_games = ["BL2", "TPS", "AoDK"]
+supported_games = ["BL2", "AoDK"]
 license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
 coop_support = "HostOnly"
 download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/AltUseFastTravel/AltUseFastTravel.sdkmod"
