--- a/find_actors/pyproject.toml
+++ b/find_actors/pyproject.toml
@@ -6,7 +6,7 @@ description = "Find Actors in a certain area. Use the command find_actors class 
 
 [tool.sdkmod]
 name = "Find Actors"
-supported_games = ["BL1", "BL2", "AoDK", "TPS", "BL3", "WL"]
+supported_games = ["BL2", "AoDK", "TPS"]
 license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
 coop_support = "HostOnly"
 download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/find_actors/find_actors.sdkmod"
